# github-copilot-upgrading

./: README_ko.md
.github/workflows/: python-ci.yml
workshop/: README_ko.md
workshop/upgraded/: README.md  pyproject.toml  setup.py  updated.md
workshop/upgraded/guachi/: config.py
workshop/upgraded/guachi/tests/: test_configmapper.py  test_configurations.py  test_database.py  test_integration.py
